[package]
name = "abci-kvserver"
version = "0.1.0"
authors = ["amanusk <amanusk@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abci = "0.6"
byteorder = "1.2.7"
integer-encoding = "1.0.5"
log = "0.4.6"
env_logger = "0.6.1"
