[package]
name = "curl-example"
version = "0.1.0"
authors = ["amanusk <amanusk@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
restson = "^0.5"
curl = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.10"
